Project perpustakaan_app {
  database_type: "MySQL"
  Note: "Schema generated from Laravel migrations"
}

Enum user_role {
  admin
  petugas
  peminjam
}

Table users {
  id bigint [pk, increment]
  username varchar
  nama_lengkap varchar
  email varchar [unique]
  email_verified_at timestamp [null]
  password varchar
  alamat text
  role user_role [default: 'peminjam']
  remember_token varchar [null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table bukus {
  id bigint [pk, increment]
  judul varchar
  penulis varchar
  penerbit varchar
  tahun_terbit int
  cover varchar [null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table kategoribukus {
  id bigint [pk, increment]
  nama varchar
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table peminjamans {
  id bigint [pk, increment]
  UserID bigint
  BukuID bigint
  TanggalPeminjaman date
  TanggalPengembalian date
  StatusPeminjaman varchar
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table kategoribuku_relasis {
  id bigint [pk, increment]
  BukuID bigint
  KategoriID bigint
}

Table password_reset_tokens {
  email varchar [pk]
  token varchar
  created_at timestamp [null]
}

Table sessions {
  id varchar [pk]
  user_id bigint [null]
  ip_address varchar [null]
  user_agent text [null]
  payload longtext
  last_activity int

  indexes {
    user_id
    last_activity
  }
}

Ref: peminjamans.UserID > users.id
Ref: peminjamans.BukuID > bukus.id
Ref: kategoribuku_relasis.BukuID > bukus.id
Ref: kategoribuku_relasis.KategoriID > kategoribukus.id
Ref: sessions.user_id > users.id
